<resources>
   <string name="app_name">BeaconBeachler</string>

    <string name="hello_world">Hello world!</string>
    <string name="button">Aa</string>
    <string name="title">Write you ideas</string>
    <string name="facebook_app_id">877795732333191</string>

    <string name="navigation_icon_description">Navigering</string>

 <!-- Beskrivelse av aktiviteten -->
 <string name="description_text">
  Her kan du skrive om det du ser museet eller andre notater om ditt besøk.
 </string>
 <string name="description_sound">
  Her kan ta opp lyd fra ulike attraksjoner, eller spille inn notater/kommentarer
 </string>
 <string name="description_camera">
  Her kan du ta bilde av det du opplever på museet/attraksjonen
 </string>
 <string name="description_beacon">
  Her kan du søke etter "beacons" som gir deg informasjon om noe i nærheten
 </string>

    <!-- Menu items -->
    <string name="action_settings">logg ut</string>
    <string name="action_profil">Min side</string>
    <string name="action_sound">Lyd opptak</string>
    <string name="action_camera">Ta bilde</string>
    <string name="action_text">Skriv tekst</string>
    <string name="action_beacon">Søk etter beacon</string>
    <string name="overflow">meny</string>

    <string name="text_prompt">Choose a place to store</string>

    <string-array name="text_array">
        <item>Velg plassering</item>
        <item>Forside</item>
        <item>Brødtekst</item>
        <item>Slutten</item>
    </string-array>

    <string name="title_activity_main">HOVEDMENY</string>
    <string name="title_activity_camera">KAMERA</string>
    <string name="title_activity_lyd_activity">LYDOPPTAK</string>
    <string name="title_activity_beacon_page">BEACON</string>
    <string name="title_activity_egg_and_beacon_page">BEACON</string>
    <string name="title_activity_writing_page">NOTATER</string>
    <string name="title_activity_login_page">MuseumScan</string>
    <string name="title_activity_regsiter_page">RegsiterPage</string>
    <string name="ta_bilde">Ta bilde</string>
    <string name="bilde">bilde</string>
    <string name="beacon">Beacon</string>
    <string name="sound">sound</string>
    <string name="brukerInfo">Når du er innenfor rekkevidde av en beacon vil beacon knappen bytte farge (se bilde).
    Når du er innenfor rekkevidde av en beacon, vil alt av notater, bilder og lydopptak bli lagret på samme sted. Ønsker du
    mer informasjon finner du dette i menyen over.</string>
</resources>
