
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".WritingPage">

    <item
        android:id="@+id/action_sound"
        android:title="@string/action_sound"

        android:layout_width="80dp"
        android:layout_height="match_parent"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_favorite"
        android:icon="@mipmap/profilicon"
        android:title="@string/action_profil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/action_camera"
        android:title="@string/action_camera"

        app:showAsAction="never"/>

    <item
        android:id="@+id/action_text"
        android:title="@string/action_text"

        app:showAsAction="never"/>

    <item
        android:id="@+id/action_beacon"
        android:title="@string/action_beacon"

        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
