<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainPage">

    <item
    android:id="@+id/action_favorite"
    android:icon="@mipmap/profilicon"
    android:title="@string/action_profil"
        android:layout_width="80dp"
        android:layout_height="90dp"
    app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sound"
        android:title="@string/action_sound"
        android:icon="@mipmap/mainsou"
        android:layout_width="80dp"
        android:layout_height="90dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_camera"
        android:title="@string/action_camera"
        android:icon="@mipmap/maincam"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_text"
        android:title="@string/action_text"
        android:icon="@mipmap/maintekst"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_beacon"
        android:title="@string/action_beacon"
        android:icon="@mipmap/mainbeac"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
